starff: tt les pages homes + login + global et+

--- a/mobile/lib/todo.txt
+++ b/mobile/lib/todo.txt
@@ -11,3 +11,7 @@ PAGE TERMINAUX
 theme OKK
 connection/inscription
     ptite base user
+
+prevent user go back from home_page
+add terminals
+finir register
